# KeyveveTakeHome

./: .env  .env.example  .env.production.example  .env.production.template  .pre-commit-config.yaml  AUDIT_INDEX.md  AUDIT_SUMMARY.txt  Audit1.md  CHAT_FEATURE_README.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_README.md  DEPLOY_CHECKLIST.md  DOCKERFILE_BUILD_FIX.md  DOCKERFILE_FIX.md  DifferentPR12.md  HOSTING_DECISION_GUIDE.md  PGVECTOR_FIX_FINAL.md  POSTGRESQL_MIGRATION_COMPLETE.md  PR11_CHECKLIST.md  PR11_SUMMARY.md  PR13_MCP_INTEGRATION.md  PR14_AUTHENTICATION_SECURITY.md  PR15_DEPLOYMENT_POLISH.md  PR2_IMPLEMENTATION.md  PR5_IMPLEMENTATION.md  QUICK_FIX_SUMMARY.md  QUICK_TEST_REFERENCE.md  RAG_EMBEDDING_IMPROVEMENTS.md  RAG_ENRICHMENT_GUIDE.md  RAG_ENRICHMENT_SUMMARY.md  RAG_FIX_SUMMARY.md  RAILWAY_MANUAL_CONFIG.md  RAILWAY_PGVECTOR_FIX.md  RAILWAY_QUICKSTART.md  RAILWAY_REFERENCE.md  RAILWAY_VISUAL_GUIDE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RENDER_QUICKSTART_CHECKLIST.md  (+46 more)
.github/workflows/: ci.yml
.hypothesis/constants/: 00f698490c2b5355  02dfb83b01b6e006  03e68ef3c459cce1  0583dccf410bf566  07b2429f6eeafc64  09711cc055611961  0a6e5f8be3ae0fc3  0b5e5251f90e009f  0d26b90e826d7819  0e0e12905642ced7  106650cffefc63fa  10696759f2a849b8  12172b845ce8bceb  12c04bc9b8283b90  12f6011db29ab5d9  12fbe27ef27e32db  1376171c7b25e272  13b83c876c57431c  19c350e42edcc04a  1a675d936c595019  1cbead05d5e4870a  1ff1c7d3a59c2ced  235947a0d7f2193f  23fd08cec363b84b  28e05aa645c7e82b  298557e221fdced7  29943390f7694187  2a70defdc97b9709  2c58a2d77851abd6  2d096a9704cc121e  2e064235a9458a42  2ec0c9975d197b1c  2f0d7e3506c406a2  2f107e5f0ddaa5ee  2fa4853a51cd4cb8  32b564f6390bd1ff  359a9f1cd740146a  360883460cc57639  3fa2f6c9f47cc294  40906888272bda06  (+114 more)
Docs/: Audit1.md  AuditPR5D.md  AuditPR7.md  AuditPR8.md  AuditPR9.md  ChatPlanFeature.md  DifferentPR11.md  LangGraph_Agent_Architecture.md  PR2_CHECKLIST.md  PR2_QUICKSTART.md  PR2_README.md  PR2_SUMMARY.md  PR5D-COMPLETION.md  PR5D-notes.md  SPEC.md  newMunich.md  nyc.md  redisDatabase.md  rio.md  roadmap.txt
Docs/schemas/: ItineraryV1.schema.json  PlanV1.schema.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_agent_run_event.py  003_add_embedding_text_metadata.py  4a1a38d4aff9_make_embedding_vector_column_nullable.py
backend/: .dockerignore  Dockerfile
backend/app/: config.py  main.py  startup_pgvector.py
eval/: __init__.py  __main__.py  run_scenarios.py  runner.py  scenarios.yaml
frontend/: .dockerignore  Dockerfile  Home.py  auth.py  plan_app.py
frontend/.streamlit/: config.toml
frontend/pages/: 00_Login.py  00_Signup.py  01_Destinations.py  02_Knowledge_Base.py  03_Plan.py  04_Chat_Plan.py
keyveve_takehome.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp-server/: .env  Dockerfile  README.md  package-lock.json  package.json
mcp-server/src/: mcp-protocol.js  server.js  weather-tool.js
scripts/: backfill_embeddings.py  deploy.sh  dev_seed.py  export_schemas.py  generate-jwt-keys.sh  generate_keys.py  log_rag_data.py  query_rag_data.py  seed_fixtures.py  setup_postgres.sh  test_vector_storage.py  view_rag_database.py  vps-setup.sh
tests/: conftest.py
tests/db/: test_dev_seed.py  test_idempotency_schema.py  test_migrations.py  test_tenancy_schema.py
tests/eval/: test_eval_runner.py  test_pr6_happy_path.py
tests/integration/: __init__.py  test_destinations_api.py  test_e2e_perf.py  test_healthz.py  test_idempotency.py  test_knowledge_api.py  test_migrations.py  test_plan_edit.py  test_rate_limit.py  test_repair_integration.py  test_retention.py  test_seed_fixtures.py  test_tenancy.py
tests/unit/: test_budget_aware_fix.py  test_budget_verification.py  test_budget_verification_fixed.py  test_chat_setup.py  test_constants_single_source.py  test_contracts_validators.py  test_database_operations.py  test_db_final.py  test_executor.py  test_executor_cache.py  test_executor_cancellation.py  test_executor_circuit_breaker.py  test_executor_timeouts_and_retries.py  test_feature_mapper.py  test_fix.py  test_flight_budget_fix.py  test_flight_mapping.py  test_full_flight_integration.py  test_full_integration.py  test_health.py  test_jsonschema_roundtrip.py  test_logging.py  test_login.py  test_mcp_weather.py  test_metrics.py  test_metrics_facade_called.py  test_nonoverlap_property.py  test_plan_api.py  test_planner.py  test_pr5_adapters.py  test_provenance.py  test_rag_enrichment.py  test_rate_limiter.py  test_repair_moves.py  test_rio_scenario.py  test_selector.py  test_server_startup.py  test_synthesizer.py  test_system_summary.py  test_transit_injection.py  (+8 more)
triply_takehome.egg-info/: PKG-INFO  SOURCES.txt
(+96 files in other folders)
